--- a/carne/index.html
+++ b/carne/index.html
@@ -1,48 +1,77 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Recepty</title>
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:600,800&amp;subset=latin-ext" rel="stylesheet">
-        <link rel="stylesheet" href="recepty.css">
-    </head>
-    <body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Recepty</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:600,800&amp;subset=latin-ext" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+
+    <div class="kontejner">
 
         <!-- hlavni recept -->
+        <div class="hlavni_recept">
+            <div class="recept">
+                <div class="kategorie">Grilování</div>
+                <div class="komentare">5 komentářů</div>
+            </div>
+            <h2 class="jidlo_1">Domácí hovězí burger</h2>
+        </div>
 
-        Domácí hovězí burger
-        Grilování
-        5 komentářů
+        <div class="recepty">
 
-        <!-- maly recept 2 -->
+            <!-- maly recept 2 -->
+            <div class="maly_recept_2">
+                <div class="recept">
+                    <div class="kategorie">Asijská kuchyně</div>
+                    <div class="komentare">16 komentářů</div>
+                </div>
+                <h2 class="jidlo">Nigiri sushi</h2>
+            </div>
 
-        Nigiri sushi
-        Asijská kuchyně
-        16 komentářů
+            <!-- maly recept 3 -->
 
-        <!-- maly recept 3 -->
+            <div class="maly_recept_3">
+                <div class="recept">
+                    <div class="kategorie">Omáčky</div>
+                    <div class="komentare">23 komentářů</div>
+                </div>
+                <h2 class="jidlo">Chili rajčatová omáčka</h2>
+            </div>
 
-        Chili rajčatová omáčka
-        Omáčky
-        23 komentářů
+            <!-- maly recept 4 -->
 
-        <!-- maly recept 4 -->
+            <div class="maly_recept_4">
+                <div class="recept">
+                    <div class="kategorie">Drůbež</div>
+                    <div class="komentare">7 komentářů</div>
+                </div>
+                <h2 class="jidlo">Pečené kuře na jablkách</h2>
+            </div>
 
-        Pečené kuře na jablkách
-        Drůbež
-        7 komentářů
+            <!-- maly recept 5 -->
+            <div class="maly_recept_5">
+                <div class="recept">
+                    <div class="kategorie">Grilování</div>
+                    <div class="komentare">19 komentářů</div>
+                </div>
+                <h2 class="jidlo">Zahradní grilovačka
+            </div>
+        </div>
+    </div>
+    </div>
 
-        <!-- maly recept 5 -->
-
-        Zahradní grilovačka
-        Grilování
-        19 komentářů
-
-        <footer class="paticka">
-            <p>Foto &copy; <a href="https://www.flickr.com/photos/68711844@N07/">Michael Stern</a> (licence <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC BY-SA 2.0</a>)</p>
-        </footer>
+    <footer class="paticka">
+        <p>Foto &copy; <a href="https://www.flickr.com/photos/68711844@N07/">Michael Stern</a> (licence <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC BY-SA 2.0</a>)</p>
+    </footer>
 
 
-    </body>
+
+</body>
+
 </html>
